--- a/package.json
+++ b/package.json
@@ -7,24 +7,38 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "node --env-file=.env --watch src/server.js"
+    "dev": "node --env-file=.env --watch src/server.js",
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand --detectOpenHandles --coverage"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "cross-env": "^10.1.0",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "globals": "^16.2.0",
+    "jest": "^29.7.0",
     "prettier": "^3.6.1",
     "prisma": "^6.12.0",
     "supertest": "^7.1.4"
   },
   "dependencies": {
-    "morgan": "^1.10.0",
     "@prisma/client": "^6.12.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0"
+  },
+  "jest": {
+  "testEnvironment": "node",
+  "transform": {},
+  "roots": ["<rootDir>/tests"],
+  "coverageDirectory": "coverage",
+  "collectCoverageFrom": ["src/**/*.js"],
+  "testEnvironmentOptions": { "customExportConditions": ["node", "node-addons"] }
   }
+
+
 }
