--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "scripts": {
     "dev": "node --env-file=.env --watch src/server.js",
     "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand --detectOpenHandles --coverage"
-
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -18,6 +17,7 @@
     "eslint-config-prettier": "^10.1.5",
     "globals": "^16.2.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
     "prettier": "^3.6.1",
     "prisma": "^6.12.0",
     "supertest": "^7.1.4"
@@ -32,13 +32,20 @@
     "morgan": "^1.10.0"
   },
   "jest": {
-  "testEnvironment": "node",
-  "transform": {},
-  "roots": ["<rootDir>/tests"],
-  "coverageDirectory": "coverage",
-  "collectCoverageFrom": ["src/**/*.js"],
-  "testEnvironmentOptions": { "customExportConditions": ["node", "node-addons"] }
+    "testEnvironment": "node",
+    "transform": {},
+    "roots": [
+      "<rootDir>/tests"
+    ],
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ],
+    "testEnvironmentOptions": {
+      "customExportConditions": [
+        "node",
+        "node-addons"
+      ]
+    }
   }
-
-
 }
