--- a/docs/public/bundled.yaml
+++ b/docs/public/bundled.yaml
@@ -382,7 +382,7 @@ paths:
         - name: search
           in: query
           required: false
-          description: Search for a certian author
+          description: Search for a certain author
           schema:
             type: string
         - name: sortBy
@@ -430,11 +430,11 @@ paths:
                       type: string
                 example:
                   - author_id: 1
-                    name: George Orwell
-                    biography: British writer and journalist
+                    name: Joanna Cole
+                    biography: Author of childrens books and teaches science
                   - author_id: 2
-                    name: William Shakespeare
-                    biography: English playwright, poet, and actor
+                    name: James Stewart
+                    biography: Professor of mathematics and a violinist
         '401':
           $ref: '#/components/responses/UnauthorizedRequest'
     post:
@@ -635,7 +635,7 @@ paths:
         - name: search
           in: query
           required: false
-          description: Search for a certian book
+          description: Search for a certain book
           schema:
             type: string
         - name: sortBy
@@ -687,14 +687,14 @@ paths:
                       type: integer
                 example:
                   - book_id: 1
-                    title: Animal Farm
-                    published_year: 1949
-                    genre: Dystopian Fiction
+                    title: The Magic School Bus
+                    published_year: 2001
+                    genre: Educational
                     author_id: 1
                   - book_id: 2
-                    title: Hamlet
-                    published_year: 1603
-                    genre: Tragedy
+                    title: Calculus 8th Edition
+                    published_year: 2015
+                    genre: Math Textbook
                     author_id: 2
         '401':
           $ref: '#/components/responses/UnauthorizedRequest'
@@ -917,6 +917,332 @@ paths:
                   Error:
                     type: string
                     example: Could not find a Book with that id
+  /reviews:
+    get:
+      summary: List all reviews
+      tags:
+        - Review
+      parameters:
+        - name: search
+          in: query
+          required: false
+          description: Search for a certian review
+          schema:
+            type: string
+        - name: sortBy
+          in: query
+          required: false
+          description: Sort by review_id or title
+          schema:
+            type: string
+        - name: sortOrder
+          in: query
+          required: false
+          description: Sort ascending (asc) or descending (dsc)
+          schema:
+            type: string
+            enum:
+              - asc
+              - desc
+        - name: limit
+          in: query
+          required: false
+          description: Limit how many reviews are returned
+          schema:
+            type: integer
+        - name: offset
+          in: query
+          required: false
+          description: Offset the results
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    review_id:
+                      type: integer
+                    title:
+                      type: string
+                    content:
+                      type: string
+                    rating:
+                      type: integer
+                      minimum: 1
+                      maximum: 5
+                    created_at:
+                      type: string
+                    book_id:
+                      type: integer
+                    user_id:
+                      type: integer
+                example:
+                  - review_id: 1
+                    title: I HATE The Magic School Bus!!
+                    content: I never got to go on field trips like that :(
+                    rating: 1
+                    created_at: '2022-11-05T08:15:30-05:00'
+                    book_id: 1
+                    user_id: 2
+                  - review_id: 2
+                    title: Wowza, what a read!
+                    content: I haven't read such an electric title since Intro to Circuits!
+                    rating: 5
+                    created_at: '2022-08-10T09:47:33-05:00'
+                    book_id: 2
+                    user_id: 1
+        '401':
+          $ref: '#/components/responses/UnauthorizedRequest'
+    post:
+      summary: Create a review
+      tags:
+        - Review
+      requestBody:
+        description: Review info
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: Boring!
+                content:
+                  type: string
+                  example: I had more fun counting each individual pixel on my Nintendo 3DS
+                rating:
+                  type: integer
+                  minimum: 1
+                  maximum: 5
+                  example: 2
+                book_id:
+                  type: integer
+                  example: 2
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  review_id:
+                    type: integer
+                    example: 3
+                  title:
+                    type: string
+                    example: Boring!
+                  content:
+                    type: string
+                    example: I had more fun counting each individual pixel on my Nintendo 3DS
+                  rating:
+                    type: integer
+                    minimum: 1
+                    maximum: 5
+                    example: 2
+                  created_at:
+                    type: string
+                    example: 2022-07-09T15:23:54:0-5:00
+                  book_id:
+                    type: integer
+                    example: 2
+                  user_id:
+                    type: integer
+                    example: 1
+        '400':
+          description: Validation failed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  Error:
+                    type: string
+                    example: book_id must exist
+        '401':
+          $ref: '#/components/responses/UnauthorizedRequest'
+        '403':
+          $ref: '#/components/responses/ForbiddenRequest'
+  /reviews/{id}:
+    get:
+      summary: Get a review by it's review_id
+      tags:
+        - Review
+      parameters:
+        - name: id
+          in: path
+          description: review_id
+          required: true
+          schema:
+            type: integer
+            example: 3
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  review_id:
+                    type: integer
+                    example: 3
+                  title:
+                    type: string
+                    example: Boring!
+                  content:
+                    type: string
+                    example: I had more fun counting each individual pixel on my Nintendo 3DS
+                  rating:
+                    type: integer
+                    minimum: 1
+                    maximum: 5
+                    example: 2
+                  created_at:
+                    type: string
+                    example: 2022-07-09T15:23:54:0-5:00
+                  book_id:
+                    type: integer
+                    example: 2
+                  user_id:
+                    type: integer
+                    example: 1
+        '401':
+          $ref: '#/components/responses/UnauthorizedRequest'
+        '403':
+          $ref: '#/components/responses/ForbiddenRequest'
+        '404':
+          description: Review Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  Error:
+                    type: string
+                    example: Could not find a review with that id
+    put:
+      summary: Update a reviews title, content, rating, or via it's review_id
+      tags:
+        - Review
+      parameters:
+        - name: id
+          in: path
+          description: book_id
+          required: true
+          schema:
+            type: integer
+            example: 1
+      requestBody:
+        description: Info to change, only one is required
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: Changed my mind - It's great!
+                content:
+                  type: string
+                  example: I can never truly hate Ms.Frizzle
+                rating:
+                  type: integer
+                  minimum: 1
+                  maximum: 5
+                  example: 4
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  review_id:
+                    type: integer
+                    example: 1
+                  title:
+                    type: string
+                    example: Changed my mind - It's great
+                  content:
+                    type: string
+                    example: I can never truly hate Ms.Frizzle
+                  rating:
+                    type: integer
+                    minimum: 1
+                    maximum: 5
+                    example: 4
+                  created_at:
+                    type: string
+                    example: '2022-11-05T08:15:30-05:00'
+                  book_id:
+                    type: integer
+                    example: 1
+                  user_id:
+                    type: integer
+                    example: 2
+        '400':
+          description: Validation failed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  Error:
+                    type: string
+                    example: Content must be at least 10 characters
+        '401':
+          $ref: '#/components/responses/UnauthorizedRequest'
+        '403':
+          $ref: '#/components/responses/ForbiddenRequest'
+        '404':
+          description: Review Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  Error:
+                    type: string
+                    example: Could not find a review with that id
+    delete:
+      summary: Delete a review
+      tags:
+        - Review
+      parameters:
+        - name: id
+          in: path
+          description: review_id
+          required: true
+          schema:
+            type: integer
+            example: 3
+      responses:
+        '204':
+          description: OK
+        '401':
+          $ref: '#/components/responses/UnauthorizedRequest'
+        '403':
+          $ref: '#/components/responses/ForbiddenRequest'
+        '404':
+          description: Review not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  Error:
+                    type: string
+                    example: Could not find a review with that id
 components:
   responses:
     UnauthorizedRequest:
